[gd_scene load_steps=3 format=3 uid="uid://bv8sh5tfcopoq"]

[ext_resource type="Script" uid="uid://ch8cacss0g3e3" path="res://sacrifice.gd" id="1_n5nk8"]
[ext_resource type="FontFile" uid="uid://crcdamqg0flk8" path="res://Assets/fonts/PixelOperator8.ttf" id="2_xhik3"]

[node name="Sacrifices" type="Node2D"]
script = ExtResource("1_n5nk8")

[node name="SacrificeHealthLabel" type="RichTextLabel" parent="."]
offset_left = 66.0
offset_top = 15.0
offset_right = 256.0
offset_bottom = 31.0
theme_override_fonts/normal_font = ExtResource("2_xhik3")
text = "Sacrifice Health"

[node name="Sacrifice Health" type="Button" parent="."]
offset_left = 59.0
offset_top = 8.0
offset_right = 263.0
offset_bottom = 38.0

[node name="SacrificeDamageLabel" type="RichTextLabel" parent="."]
offset_left = 62.0
offset_top = 79.0
offset_right = 266.0
offset_bottom = 95.0
theme_override_fonts/normal_font = ExtResource("2_xhik3")
text = "Sacrifice Damage"

[node name="Sacrifice Damage" type="Button" parent="."]
offset_left = 55.0
offset_top = 73.0
offset_right = 270.0
offset_bottom = 102.0

[node name="SacrificeSpeedLabel" type="RichTextLabel" parent="."]
offset_left = 68.0
offset_top = 146.0
offset_right = 254.0
offset_bottom = 162.0
theme_override_fonts/normal_font = ExtResource("2_xhik3")
text = "Sacrifice Speed"

[node name="Sacrifice Speed" type="Button" parent="."]
offset_left = 59.0
offset_top = 140.0
offset_right = 264.0
offset_bottom = 168.0

[connection signal="pressed" from="Sacrifice Health" to="." method="_on_sacrifice_health_pressed"]
[connection signal="pressed" from="Sacrifice Damage" to="." method="_on_sacrifice_damage_pressed"]
[connection signal="pressed" from="Sacrifice Speed" to="." method="_on_sacrifice_speed_pressed"]
